<resources>
    <string name="app_name">FirebaseCourse</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="the_blonde_bakeshop">The Blonde Bakeshop</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="click_here_to_register">Click Here to Register</string>
    <string name="sign_in">Sign In</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="i_accept_the_terms_and_conditions">I accept the terms and conditions</string>
    <string name="last_name">Last Name</string>
    <string name="two_tier_cake_with_surrounding_cupdakes">two tier cake with surrounding cupdakes</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="reset_password_instructions">Enter your email address to receive a link to reset your password.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="orders">Orders</string>
    <string name="settings_floating_action_button">Settings Floating Action Button</string>
    <string name="add_product">Add Product</string>
    <string name="settings">Settings</string>
    <string name="product_title">Product Title</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_products_added_yet">No products added yet</string>
    <string name="name">Name</string>
    <string name="product_image">Product Image</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="delete_confirm">Delete item?</string>
    <string name="delete_confirm_message">Are you sure you want to delete this item?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="return_to_product_page">Return to Product Page</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>