<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/product_image_recyclerview"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="15dp"
        android:background="@color/darker_pink"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_add_a_photo_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/product_image" />


    <TextView
        android:id="@+id/product_name_recyclerview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@+id/product_image_recyclerview"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/product_price_recyclerview"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/price"
        app:layout_constraintStart_toEndOf="@+id/product_image_recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/product_name_recyclerview" />

    <ImageView
        android:id="@+id/delete_icon"
        android:layout_width="30dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/delete_icon"
        android:src="@drawable/delete_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toEndOf="@+id/product_name_recyclerview"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>